Confirm Email Registration

--- a/WaterCompany/appsettings.json
+++ b/WaterCompany/appsettings.json
@@ -17,5 +17,12 @@
     "Key": "qwertyuioplkjhgfdsazxcvbnmmnbvcxzasdfghjklpoiuytrewq",
     "Issuer": "localhost",
     "Audience": "users"
+  },
+  "Mail": {
+    "NameFrom": "Administrator",
+    "From": "andre2411adm@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": "587",
+    "Password": "qyltbkeisvwrdgef"
   }
 }
