--- a/WaterCompany/WaterCompany.csproj
+++ b/WaterCompany/WaterCompany.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Invoices\" />
     <Folder Include="wwwroot\images\clients\" />
   </ItemGroup>
 
