--- a/WaterCompany/WaterCompany.csproj
+++ b/WaterCompany/WaterCompany.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\ConsumptionsController.cs~RF1e0276c1.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
     <PackageReference Include="Azure.Storage.Files.Shares" Version="12.11.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.11.1" />
